<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <LinearLayout
        android:id="@+id/layout2"
        app:layout_constraintTop_toBottomOf="@+id/upcomming_matche"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:padding="0dp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="top"
            android:orientation="vertical"
            android:layout_margin="@dimen/_1sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >


            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                card_view:cardUseCompatPadding="false"
                card_view:cardElevation="@dimen/_3sdp"
                card_view:cardCornerRadius="@dimen/_7sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:visibility="visible"
                >


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_7sdp"

                    android:gravity="center">






                    <LinearLayout
                        android:id="@+id/l1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        card_view:layout_constraintTop_toTopOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent">


                        <TextView
                            android:id="@+id/icc_cricket"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="5dp"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="0dp"
                            android:text="@string/icc_cricket"
                            android:textAppearance="@style/icc_cricket"
                            android:gravity="left"
                            />

                        <TextView
                            android:id="@+id/match_41_en"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="5dp"
                            android:layout_alignParentTop="true"
                            android:text="@string/match_41_en"
                            android:textAppearance="@style/match_41_en"
                            android:gravity="top"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/l2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="left"
                        android:layout_marginRight="5dp"
                        card_view:layout_constraintTop_toTopOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent">


                        <TextView
                            android:id="@+id/jul_2019"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_marginLeft="0dp"

                            android:layout_marginTop="0dp"
                            android:text="@string/jul_2019"
                            android:textAppearance="@style/jul_2019"
                            android:gravity="right"
                            android:layout_gravity="left"
                            />

                        <TextView
                            android:id="@+id/pm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp"
                            android:text="@string/pm"
                            android:textAppearance="@style/pm"
                            android:gravity="right|top"
                            />

                    </LinearLayout>





                    <LinearLayout
                        android:id="@+id/l4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toBottomOf="@+id/l1"
                        >


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center"
                            >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"

                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_uk2"/>

                            <TextView
                                android:id="@+id/eng"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="5dp"
                                android:layout_alignParentTop="true"
                                android:layout_marginTop="0dp"
                                android:text="@string/eng"
                                android:textAppearance="@style/eng_bold"
                                android:gravity="center"
                                android:layout_gravity="center_vertical"
                                />




                        </LinearLayout>




                    </LinearLayout>



                    <TextView
                        android:id="@+id/vs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"

                        android:layout_alignParentTop="true"

                        android:text="@string/vs"
                        android:textAppearance="@style/vs"
                        android:gravity="top"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        card_view:layout_constraintStart_toEndOf="@+id/l4"
                        card_view:layout_constraintTop_toBottomOf="@+id/l1"
                        />




                    <LinearLayout
                        android:id="@+id/l5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        card_view:layout_constraintStart_toEndOf="@+id/vs"
                        card_view:layout_constraintTop_toBottomOf="@+id/l1"
                        >


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center"
                            >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_nz2"/>

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="5dp"
                                android:layout_alignParentTop="true"
                                android:layout_marginTop="0dp"
                                android:text="@string/nz"
                                android:textAppearance="@style/nz_bold"
                                android:gravity="center"
                                android:layout_gravity="center_vertical"
                                />




                        </LinearLayout>




                    </LinearLayout>



                    <ImageView
                        card_view:layout_constraintTop_toBottomOf="@+id/l2"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_reminder_added"/>






                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>









        </androidx.constraintlayout.widget.ConstraintLayout>




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>