<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    >


    <include layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/toolbar_" />


    <View
        android:id="@+id/rectangle_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        />


    <LinearLayout
        android:id="@+id/l_recy"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:padding="0dp"
        android:visibility="visible"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="vertical"

            >


            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                card_view:cardUseCompatPadding="false"
                card_view:cardElevation="@dimen/_5sdp"
                card_view:cardCornerRadius="@dimen/_7sdp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="visible"
                android:id="@+id/card1"
                >


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_7sdp"

                    android:gravity="center">




                    <RelativeLayout
                        android:id="@+id/l4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"

                        android:layout_marginTop="@dimen/_10sdp"
                        card_view:layout_constraintTop_toTopOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent">




                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_ellipseprofile"/>


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_vectorgreen"/>



                        <!-- 50.0 -->


                    </RelativeLayout>

                    <TextView
                        android:id="@+id/anand_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="0dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/anand_b"
                        android:textAppearance="@style/anand_b"
                        android:gravity="top"
                        card_view:layout_constraintTop_toBottomOf="@+id/l4"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        />

                    <TextView
                        android:id="@+id/abongir_gma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="0dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="@string/abongir_gma"
                        android:textAppearance="@style/abongir_gma"
                        android:gravity="right|top"
                        card_view:layout_constraintTop_toBottomOf="@+id/anand_b"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        />


                    <TextView
                        android:id="@+id/joined_6_mo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="0dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="@string/joined_6_mo"
                        android:textAppearance="@style/joined_6_mo"
                        android:gravity="right|top"
                        card_view:layout_constraintTop_toBottomOf="@+id/abongir_gma"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>






            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:layout_constraintTop_toBottomOf="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                card_view:cardUseCompatPadding="false"
                card_view:cardElevation="@dimen/_5sdp"
                card_view:cardCornerRadius="@dimen/_7sdp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="visible"
                android:id="@+id/card4"
                >


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_7sdp"

                    android:gravity="center">



                    <RelativeLayout
                        android:id="@+id/l_recy2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@android:color/transparent"
                        android:padding="0dp"
                        android:layout_marginTop="@dimen/_10sdp">




                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_vectorblackprofile"/>



                        <TextView
                            android:id="@+id/profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="80dp"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="0dp"
                            android:layout_centerVertical="true"
                            android:text="@string/profile"
                            android:textAppearance="@style/profile"
                            android:gravity="center"
                            />


                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:src="@drawable/ic_vectorright"/>



                    </RelativeLayout>

                    <View
                        android:id="@+id/view1"
                        card_view:layout_constraintTop_toBottomOf="@+id/l_recy2"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="0.5sp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"

                        android:background="@android:color/black"
                        android:src="@drawable/ic_line"/>


                    <RelativeLayout
                        android:id="@+id/l_recy3"
                        app:layout_constraintTop_toBottomOf="@+id/view1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@android:color/transparent"
                        android:padding="0dp"
                        android:layout_marginTop="@dimen/_10sdp">




                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:src="@drawable/ic_vectorsettings"/>



                        <TextView
                            android:id="@+id/profile2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="80dp"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="0dp"
                            android:layout_centerVertical="true"
                            android:text="@string/settings"
                            android:textAppearance="@style/settings"
                            android:gravity="center"
                            />


                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:src="@drawable/ic_vectorright"/>



                    </RelativeLayout>

                    <View
                        android:id="@+id/view2"
                        card_view:layout_constraintTop_toBottomOf="@+id/l_recy3"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="0.5sp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"

                        android:background="@android:color/black"
                        android:src="@drawable/ic_line"/>


                    <RelativeLayout
                        android:id="@+id/l_recy4"
                        app:layout_constraintTop_toBottomOf="@+id/view2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@android:color/transparent"
                        android:padding="0dp"
                        android:layout_marginTop="@dimen/_10sdp">




                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:src="@drawable/ic_vectordocs"/>



                        <TextView
                            android:id="@+id/profile21"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="80dp"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="0dp"
                            android:layout_centerVertical="true"
                            android:text="@string/disclaimer"
                            android:textAppearance="@style/disclaimer"
                            android:gravity="center"
                            />


                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:src="@drawable/ic_vectorright"/>



                    </RelativeLayout>

                    <View
                        android:id="@+id/view3"
                        card_view:layout_constraintTop_toBottomOf="@+id/l_recy4"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="0.5sp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"

                        android:background="@android:color/white"
                        android:src="@drawable/ic_line"/>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>




    </LinearLayout>









</androidx.constraintlayout.widget.ConstraintLayout>